Reconfigured folder directory and updated README for actual first release

--- a/heroSlider/styles/heroSlider.css
+++ b/heroSlider/styles/heroSlider.css
@@ -1,4 +1,4 @@
-/* Standard Next and Previous Buttons (Fully Cusotmizable!) */
+/* Standard Next and Previous Buttons (Fully Customizable!) */
 div#hs-previous-button, div#hs-next-button {
     background-color: rgb(180, 180, 180); 
     position: relative;
